--- a/.github/workflows/gh-deploy.yaml
+++ b/.github/workflows/gh-deploy.yaml
@@ -13,10 +13,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js and pnpm
-        uses: pnpm/setup-pnpm@v6
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          version: latest
+          node-version: "18.X"
+
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: 8
+          run_install: false
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
         run: |
@@ -24,7 +43,7 @@ jobs:
 
       - name: Build Next.js app
         run: |
-          pnpm run build
+          pnpm build
 
       - name: Deploy to GitHub Pages
         run: |
