--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
-    "build": "next build"
+    "build": "next build",
+    "deploy": "gh-pages -d out"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/node": "20.6.3",
     "@types/react": "^18.2.28",
+    "gh-pages": "^6.1.0",
     "typescript": "5.2.2"
   }
 }
