--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://notes.heavyrisem.kr",
   "scripts": {
     "dev": "next dev",
     "start": "next start",
