--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
-    "build": "next build",
-    "deploy": "gh-pages -d out"
+    "build": "pnpm generate:meta && next build",
+    "deploy": "gh-pages -d out",
+    "generate:meta": "ts-node scripts/generateMeta.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "@types/node": "20.6.3",
     "@types/react": "^18.2.28",
     "gh-pages": "^6.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   }
 }
